@@ -17,7 +17,6 @@ use WCPay\MultiCurrency\Utils;
 class WooCommerceProductAddOns {
 
 	const ADDONS_CONVERTED_META_KEY = '_wcpay_multi_currency_addons_converted';
-	const FILTER_PREFIX             = 'wcpay_multi_currency_';
 
 	/**
 	 * MultiCurrency class.
@@ -60,7 +59,7 @@ class WooCommerceProductAddOns {
 				add_filter( 'woocommerce_product_addons_get_item_data', [ $this, 'get_item_data' ], 50, 3 );
 				add_filter( 'woocommerce_product_addons_update_product_price', [ $this, 'update_product_price' ], 50, 4 );
 				add_filter( 'woocommerce_product_addons_order_line_item_meta', [ $this, 'order_line_item_meta' ], 50, 4 );
-				add_filter( self::FILTER_PREFIX . 'should_convert_product_price', [ $this, 'should_convert_product_price' ], 50, 2 );
+				add_filter( MultiCurrency::FILTER_PREFIX . 'should_convert_product_price', [ $this, 'should_convert_product_price' ], 50, 2 );
 			}
 
 			if ( wp_doing_ajax() ) {
