@@ -5,6 +5,7 @@
 * Update - Avoid having invalid intervals (greater than 1 year) in subscription products.
 * Add - Add compatibility between Multi-Currency and WooCommerce Bookings.
 * Fix - Do not show default currency selector on Account Details page when only one currency is available.
+* Add - Add filters to disable or filter Multi-Currency sql query clauses for analytics.
 * Fix - Display risk for payment methods without risk assessment
 
 = 3.2.3 - 2021-11-01 =
